fix img overflow

--- a/web/cobrands/fixmystreet/base.scss
+++ b/web/cobrands/fixmystreet/base.scss
@@ -109,6 +109,11 @@ $fms-green: #62b356;
       text-decoration: underline;
     }
   }
+
+  img {
+    max-width: 100%;
+  }
+
   .wrapper {
     display: block;
     @media only screen and (min-width: 48em) {
